fix: available on mobile overlay doesn't appear feat: add button to close mobile not available overlay

--- a/styles/generalStyles.css
+++ b/styles/generalStyles.css
@@ -295,18 +295,24 @@
 }
 
 @media only screen and (max-width: 767px) {
-    .mobile-overlay {
+    #mobile-overlay:not(.collapsed) {
         z-index: 99;
+    }
+
+    #mobile-overlay.collapsed {
+        z-index: -5;
+        display: none;
     }
 }
 
 @media only screen and (min-width: 768px) {
-    .mobile-overlay {
+    #mobile-overlay {
         z-index: -5;
+        display: none;
     }
 }
 
-.mobile-overlay {
+#mobile-overlay {
     position: fixed;
     width: 100%;
     height: 100%;
@@ -318,6 +324,7 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    text-align: center;
 }
 
 #mobile-overlay-text {
